# reg

./: Cargo.toml  README.md  README.org  manifest.scm  shell.nix
lisp/: stdlib.lisp  test_atoms.lisp  test_basics.lisp  test_channels.lisp  test_embedding_api.lisp  test_lambda_alias.lisp  test_macros.lisp  test_modules.lisp  test_parallel.lisp  test_pure_functions.lisp  test_spawn.lisp  test_stdlib.lisp  test_tco.lisp
lisp/modules/: greetings.lisp  math.lisp  predicates.lisp
src/: README.md  bytecode.rs  compiler.rs  eval.rs  jit.rs  lib.rs  macros.rs  main.rs  parser.rs  value.rs  vm.rs
